--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,22 +4,12 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
 
-    <servlet>
-        <servlet-name>SqlGatewayServlet</servlet-name>
-        <servlet-class>murach.sql.SqlGatewayServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>SqlGatewayServlet</servlet-name>
-        <url-pattern>/sqlGateway</url-pattern>
-    </servlet-mapping>
-
     <welcome-file-list>
-        <welcome-file>sqlGateway</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+
 
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
-
 </web-app>
